--- a/style.css
+++ b/style.css
@@ -130,7 +130,7 @@ h4 {
         box-shadow: inset 200px 0 50px rgba(0, 0, 0, .5), 15px 0 50px rgba(0, 0, 0, .5);
     }
     .card .details p {
-        font-size: 14px;
+        font-size: 16px;
     }
 }
 
@@ -138,9 +138,10 @@ h4 {
     .card {
         width: 95%;
         height: auto;
+		transform: scale(1.2);
     }
     .card .details p {
-        font-size: 12px;
+        font-size: 14px;
         padding-left: 10px;
     }
     .text-right {
