--- a/style.css
+++ b/style.css
@@ -84,6 +84,118 @@ h4 {
 .card .imgBox img {
 	min-width: 250px;
 	max-height: 400px;
+}body {
+    font-family: 'Indie Flower', cursive !important;
+    background: #9F8C76;
+    margin: 0px;
+    padding: 0px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+}
+
+h4 {
+    font-size: 26px;
+    line-height: 1px;
+    font-family: 'Great Vibes', cursive !important;
+}
+
+.color1 { color: #1BBC9B; }
+.color2 { color: #59a37c; }
+
+.card {
+    color: #013243;
+    position: relative;
+    width: 350px;
+    height: 450px;
+    background: #e0e1dc;
+    transform-style: preserve-3d;
+    transform: perspective(2000px);
+    box-shadow: inset 300px 0 50px rgba(0, 0, 0, .5), 20px 0 60px rgba(0, 0, 0, .5);
+    transition: 1s;
+    cursor: pointer;
+}
+
+.card.open {
+    transform: perspective(2000px) rotateY(-135deg) scale(1.2);
+    box-shadow: inset 20px 0 50px rgba(0, 0, 0, .5), 0 10px 100px rgba(0, 0, 0, .5);
+}
+
+.card .imgBox {
+    width: 100%;
+    height: 100%;
+    position: relative;
+    transform-origin: left;
+    transition: .7s;
+}
+
+.card .bark {
+    position: absolute;
+    background: #e0e1dc;
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+    transition: .7s;
+    box-shadow: 300px 200px 100px rgba(0, 0, 0, .4) inset;
+}
+
+.card .imgBox img {
+    width: 100%;
+    height: auto;
+    border-radius: 10px;
+}
+
+.card .details {
+    position: absolute;
+    font-family: 'Great Vibes', cursive;
+    top: 0;
+    left: 0;
+    box-sizing: border-box;
+    padding: 10px;
+    z-index: -1;
+    margin-top: 70px;
+}
+
+.card .details p {
+    font-size: 18px;
+    line-height: 1.6;
+    padding: 0 0 0 20px;
+}
+
+.card .details h4 {
+    text-align: center;
+}
+
+.text-right {
+    text-align: right;
+    margin-right: 20px;
+}
+
+/* Responsive Styles */
+@media (max-width: 768px) {
+    .card {
+        width: 90%;
+        height: auto;
+    }
+    .card .details p {
+        font-size: 16px;
+    }
+}
+
+@media (max-width: 480px) {
+    .card {
+        width: 95%;
+        height: auto;
+        transform: scale(1.2);
+    }
+    .card .details p {
+        font-size: 14px;
+        padding-left: 10px;
+    }
+    .text-right {
+        margin-right: 10px;
+    }
 }
 
 .card:hover .imgBox {
