--- a/style.css
+++ b/style.css
@@ -1,90 +1,4 @@
-
-
 body {
-	font-family: 'Indie Flower', cursive !important;
-  background: #9F8C76;
-	margin: 0px;
-	padding: 0px;
-}
-
-::selection {
-	background: transparent;
-}
-
-h4 {
-	font-size: 26px;
-	line-height: 1px;
-	font-family: 'Great Vibes', cursive !important;
-}
-
-.color1{color:#1BBC9B}
-.color2{color:#59a37c}
-
-
-.card {
-	color: #013243;
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	width: 300px;
-	height: 400px;
-	background: #e0e1dc;
-	transform-style: preserve-3d;
-	transform: translate(-50%,-50%) perspective(2000px);
-	box-shadow: inset 300px 0 50px rgba(0,0,0,.5), 20px 0 60px rgba(0,0,0,.5);
-	transition: 1s;
-}
-
-.card:hover {
-	transform: translate(-50%,-50%) perspective(2000px) rotate(15deg) scale(1.2);
-	box-shadow: inset 20px 0 50px rgba(0,0,0,.5), 0 10px 100px rgba(0,0,0,.5);
-}
-
-.card:before {
-	content:'';
-	position: absolute;
-	top: -5px;
-	left: 0;
-	width: 100%;
-	height: 5px;
-	background: #BAC1BA;
-	transform-origin: bottom;
-	transform: skewX(-45deg);
-}
-
-.card:after {
-	content: '';
-	position: absolute;
-	top: 0;
-	right: -5px;
-	width: 5px;
-	height: 100%;
-	background: #92A29C;
-	transform-origin: left;
-	transform: skewY(-45deg);
-}
-
-.card .imgBox {
-	width: 100%;
-	height: 100%;
-	position: relative;
-	transform-origin: left;
-	transition: .7s;
-}
-
-.card .bark {
-	position: absolute;
-	background: #e0e1dc;
-	width: 100%;
-	height: 100%;
-	opacity: 0;
-	transition: .7s;
-}
-
-.card .imgBox img {
-	min-width: 250px;
-	max-height: 400px;
-}body {
     font-family: 'Indie Flower', cursive !important;
     background: #9F8C76;
     margin: 0px;
@@ -115,6 +29,7 @@ h4 {
     box-shadow: inset 300px 0 50px rgba(0, 0, 0, .5), 20px 0 60px rgba(0, 0, 0, .5);
     transition: 1s;
     cursor: pointer;
+    margin: 0 auto; /* Ensures the card stays centered */
 }
 
 .card.open {
@@ -177,6 +92,7 @@ h4 {
     .card {
         width: 90%;
         height: auto;
+        margin: 0 auto; /* Center the card */
     }
     .card .details p {
         font-size: 16px;
@@ -188,69 +104,7 @@ h4 {
         width: 95%;
         height: auto;
         transform: scale(1.2);
-    }
-    .card .details p {
-        font-size: 14px;
-        padding-left: 10px;
-    }
-    .text-right {
-        margin-right: 10px;
-    }
-}
-
-.card:hover .imgBox {
-	transform: rotateY(-135deg);
-}
-
-.card:hover .bark {
-	opacity: 1;
-	transition: .6s;
-  box-shadow: 300px 200px 100px rgba(0, 0, 0, .4) inset;
-}
-
-.card .details {
-	position: absolute;
-	font-family: 'Great Vibes', cursive;
-	top: 0;
-	left: 0;
-	box-sizing: border-box;
-	padding: 0 0 0 10px;
-	z-index: -1;
-	margin-top: 70px;
-}
-
-.card .details p {
-	font-size: 15px;
-	line-height: 5px;
-	transform: rotate(-10deg);
-	padding: 0 0 0 20px;
-}
-
-.card .details h4 {
-	text-align: center;
-}
-
-.text-right {
-	text-align: right;
-}
-
-/* Responsive Styles */
-@media (max-width: 768px) {
-    .card {
-        width: 90%;
-        height: auto;
-        box-shadow: inset 200px 0 50px rgba(0, 0, 0, .5), 15px 0 50px rgba(0, 0, 0, .5);
-    }
-    .card .details p {
-        font-size: 16px;
-    }
-}
-
-@media (max-width: 480px) {
-    .card {
-        width: 95%;
-        height: auto;
-		transform: scale(1.2);
+        margin: 0 auto; /* Center the card */
     }
     .card .details p {
         font-size: 14px;
