--- a/style.css
+++ b/style.css
@@ -7,16 +7,8 @@ body {
     justify-content: center;
     align-items: center;
     height: 100vh;
+    overflow: hidden;
 }
-
-h4 {
-    font-size: 26px;
-    line-height: 1px;
-    font-family: 'Great Vibes', cursive !important;
-}
-
-.color1 { color: #1BBC9B; }
-.color2 { color: #59a37c; }
 
 .card {
     color: #013243;
@@ -29,11 +21,14 @@ h4 {
     box-shadow: inset 300px 0 50px rgba(0, 0, 0, .5), 20px 0 60px rgba(0, 0, 0, .5);
     transition: 1s;
     cursor: pointer;
-    margin: 0 auto; /* Ensures the card stays centered */
+    margin: 0 auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .card.open {
-    transform: perspective(2000px) rotateY(-135deg) scale(1.2);
+    transform: perspective(2000px) rotateY(-135deg) scale(1.3);
     box-shadow: inset 20px 0 50px rgba(0, 0, 0, .5), 0 10px 100px rgba(0, 0, 0, .5);
 }
 
@@ -43,22 +38,6 @@ h4 {
     position: relative;
     transform-origin: left;
     transition: .7s;
-}
-
-.card .bark {
-    position: absolute;
-    background: #e0e1dc;
-    width: 100%;
-    height: 100%;
-    opacity: 0;
-    transition: .7s;
-    box-shadow: 300px 200px 100px rgba(0, 0, 0, .4) inset;
-}
-
-.card .imgBox img {
-    width: 100%;
-    height: auto;
-    border-radius: 10px;
 }
 
 .card .details {
@@ -78,10 +57,6 @@ h4 {
     padding: 0 0 0 20px;
 }
 
-.card .details h4 {
-    text-align: center;
-}
-
 .text-right {
     text-align: right;
     margin-right: 20px;
@@ -92,7 +67,7 @@ h4 {
     .card {
         width: 90%;
         height: auto;
-        margin: 0 auto; /* Center the card */
+        transform: scale(1.1);
     }
     .card .details p {
         font-size: 16px;
@@ -101,16 +76,11 @@ h4 {
 
 @media (max-width: 480px) {
     .card {
-        width: 95%;
+        width: 100%;
         height: auto;
         transform: scale(1.2);
-        margin: 0 auto; /* Center the card */
     }
     .card .details p {
-        font-size: 14px;
-        padding-left: 10px;
-    }
-    .text-right {
-        margin-right: 10px;
+        font-size: 16px;
     }
 }
