--- a/style.css
+++ b/style.css
@@ -9,10 +9,6 @@ body {
     height: 100vh;
 }
 
-::selection {
-    background: transparent;
-}
-
 h4 {
     font-size: 26px;
     line-height: 1px;
@@ -25,42 +21,19 @@ h4 {
 .card {
     color: #013243;
     position: relative;
-    width: 300px;
-    height: 400px;
+    width: 350px;
+    height: 450px;
     background: #e0e1dc;
     transform-style: preserve-3d;
     transform: perspective(2000px);
     box-shadow: inset 300px 0 50px rgba(0, 0, 0, .5), 20px 0 60px rgba(0, 0, 0, .5);
     transition: 1s;
+    cursor: pointer;
 }
 
-.card:hover {
-    transform: perspective(2000px) rotate(15deg) scale(1.1);
+.card.open {
+    transform: perspective(2000px) rotateY(-135deg) scale(1.2);
     box-shadow: inset 20px 0 50px rgba(0, 0, 0, .5), 0 10px 100px rgba(0, 0, 0, .5);
-}
-
-.card:before {
-    content: '';
-    position: absolute;
-    top: -5px;
-    left: 0;
-    width: 100%;
-    height: 5px;
-    background: #BAC1BA;
-    transform-origin: bottom;
-    transform: skewX(-45deg);
-}
-
-.card:after {
-    content: '';
-    position: absolute;
-    top: 0;
-    right: -5px;
-    width: 5px;
-    height: 100%;
-    background: #92A29C;
-    transform-origin: left;
-    transform: skewY(-45deg);
 }
 
 .card .imgBox {
@@ -87,15 +60,6 @@ h4 {
     border-radius: 10px;
 }
 
-.card:hover .imgBox {
-    transform: rotateY(-135deg);
-}
-
-.card:hover .bark {
-    opacity: 1;
-    transition: .6s;
-}
-
 .card .details {
     position: absolute;
     font-family: 'Great Vibes', cursive;
@@ -108,8 +72,8 @@ h4 {
 }
 
 .card .details p {
-    font-size: 16px;
-    line-height: 1.4;
+    font-size: 18px;
+    line-height: 1.6;
     padding: 0 0 0 20px;
 }
 
@@ -127,10 +91,9 @@ h4 {
     .card {
         width: 90%;
         height: auto;
-        box-shadow: inset 200px 0 50px rgba(0, 0, 0, .5), 15px 0 50px rgba(0, 0, 0, .5);
     }
     .card .details p {
-        font-size: 14px;
+        font-size: 16px;
     }
 }
 
@@ -138,9 +101,10 @@ h4 {
     .card {
         width: 95%;
         height: auto;
+        transform: scale(1.2);
     }
     .card .details p {
-        font-size: 12px;
+        font-size: 14px;
         padding-left: 10px;
     }
     .text-right {
