--- a/style.css
+++ b/style.css
@@ -29,13 +29,14 @@ h4 {
     box-shadow: inset 300px 0 50px rgba(0, 0, 0, .5), 20px 0 60px rgba(0, 0, 0, .5);
     transition: 1s;
     cursor: pointer;
+    touch-action: manipulation;
+    transform: perspective(1000px);
 }
 
 .card.open {
-    transform: perspective(2000px) rotateY(-135deg) scale(1.2);
+    transform: perspective(1000px) rotateY(-180deg); /* Adjust as needed */
     box-shadow: inset 20px 0 50px rgba(0, 0, 0, .5), 0 10px 100px rgba(0, 0, 0, .5);
 }
-
 .card .imgBox {
     width: 100%;
     height: 100%;
@@ -74,7 +75,7 @@ h4 {
 .card .details p {
     font-size: 18px;
     line-height: 1.6;
-    padding: 0 0 0 20px;
+    padding: 0 10px; /* Adjust as needed */
 }
 
 .card .details h4 {
@@ -86,7 +87,6 @@ h4 {
     margin-right: 20px;
 }
 
-/* Responsive Styles */
 @media (max-width: 768px) {
     .card {
         width: 90%;
@@ -101,13 +101,8 @@ h4 {
     .card {
         width: 95%;
         height: auto;
-        transform: scale(1.2);
     }
     .card .details p {
         font-size: 14px;
-        padding-left: 10px;
-    }
-    .text-right {
-        margin-right: 10px;
     }
 }
