zoom change css

--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@ body {
     width: 350px; /* Width of the card */
     height: 450px; /* Height of the card */
     position: relative;
+    zoom:1.5;
 }
 
 /* Container for 3D flip effect */
